--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           7.500 / 10.000 (75%)
         </div>
       </div>
-      <p id="quota-remaining-msg" class="mt-2 text-sm text-gray-300" data-i18n="quota.remaining">Sisa kuota: <span id="quota-remaining">2.500</span></p>
+      <p id="quota-remaining-msg" class="mt-2 text-sm text-gray-300">Quota Remaining: <span id="quota-remaining">2.500</span></p>
     </section>
 
     <!-- WHY JOIN -->
@@ -652,3 +652,4 @@
   </script>
 </body>
 </html>
+
