--- a/index.html
+++ b/index.html
@@ -257,10 +257,10 @@
           <h3 class="text-xl font-bold mb-4" data-i18n="payment_modal.title">Pilih Metode Pembayaran</h3>
           <div class="space-y-3">
             <button id="pay-mayar" class="w-full px-4 py-2 bg-yellow-500 text-black font-bold rounded-lg hover:bg-yellow-400" data-i18n="payment_modal.pay_mayar">
-              Mayar.id
+              🇮🇩 Mayar.id [IDR]
             </button>
             <button id="pay-nowpayments" class="w-full px-4 py-2 bg-indigo-500 text-white font-bold rounded-lg hover:bg-indigo-400" data-i18n="payment_modal.pay_nowpayments">
-              NOWPayments
+              🌐 NOWPayments [TON]
             </button>
           </div>
           <button id="close-modal" class="mt-5 text-gray-400 hover:text-gray-200 text-sm" data-i18n="payment_modal.cancel">Batal</button>
@@ -663,4 +663,5 @@
   </script>
 </body>
 </html>
+
 
